bad/func_call_invalid_arg_conversion_class_to_class_side.example_compiler_output
ERROR
[1mbad/func_call_invalid_arg_conversion_class_to_class_side.lat:7:6: [1;31merror: [0;1mvalue of type `Z` is not convertible to type `Y`[m
	foo(new Z);
	    [1;32m^[m
[1mbad/func_call_invalid_arg_conversion_class_to_class_side.lat:11:1: [1;34mnote: [0;1m`foo` declared here[m
void foo(Y a) {}
[1;32m^[m
